# emogic

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
src/emogic/: config.py  emoji.py  emoji_manager.py  main.py  sticker.py  util.py
