[project]
name = "emogic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Javier Ferrer", email = "javier.f.g@um.es" }]
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "grapheme>=0.6.0",
    "loguru>=0.7.3",
    "python-telegram-bot>=22.1",
]

[project.scripts]
emogic = "emogic:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
